k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: calculator
  labels:
    app.kubernetes.io/name: calculator
