k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calculator
  namespace: calculator
  labels:
    app: calculator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator
          image: ghcr.io/mrthehavok/k8s-basic-webapp/calculator:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
