k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
  namespace: calculator
spec:
  selector:
    app: calculator
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
